--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,9 +6,11 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "src/app/services/token/token-storage-service.service.ts"
+
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
   ]
 }
